[project]
name = "MachineLearning-DataScienceII"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "luheiss", email = "hl7975@mci4me.at"},
]
dependencies = ["numpy>=2.3.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
